--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,13 @@
 
    <body>
       <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <form action="/name" method="post">
+            <label>First Name :</label>
+            <input type="text" name="first" value="John"><br>
+            <label>Last Name :</label>
+            <input type="text" name="last" value="Doe"><br><br>
+            <input type="submit" value="Submit">
+         </form> 
       </div>
    </body>
 
