--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,35 @@
+<!-- This is a static file -->
+<!-- served from your routes in server.js -->
+
+<!-- You might want to try something fancier: -->
+<!-- html/nunjucks docs: http://mozilla.github.io/nunjucks/ -->
+<!-- jade: http://jade-lang.com/ -->
+<!-- haml: http://haml.info/tutorial.html -->
+<!-- hbs(handlebars): http://handlebarsjs.com/expressions.html -->
+
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>MongoDB & Mongoose | freeCodeCamp.org</title>
+    <link
+      rel="shortcut icon"
+      href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      body {
+        background-color: #ddd;
+        color: #333;
+        font-family: sans-serif;
+        text-align: center;
+      }
+    </style>
+  </head>
 
-   <head>
-      <title>Backend Challenges | Free Code Camp</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="/public/style.css" rel="stylesheet" type="text/css">
-   </head>
-
-   <body>
-      <div class="container">
-         <form action="/name" method="post">
-            <label>First Name :</label>
-            <input type="text" name="first" value="John"><br>
-            <label>Last Name :</label>
-            <input type="text" name="last" value="Doe"><br><br>
-            <input type="submit" value="Submit">
-         </form> 
-      </div>
-   </body>
-
+  <body>
+    <h1>MongoDB & Mongoose</h1>
+  </body>
 </html>
